# searxng-langchain-demo

./: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/configs/: limiter.toml  nginx.conf  settings.yml
